audio: t3 tdm bringup [1/1]
PD#SWPL-47197

Problem:
t3 tdm bringup

Solution:
add tas5805 and pin mux in dts

Verify:
t3-ar301

Change-Id: Ie0d9698027f48546624c7edb4736f1179c4f1f8a
Signed-off-by: zirui.xiao <zirui.xiao@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1860,6 +1860,13 @@
 		};
 	};
 
+	mclk_1_pins: mclk_1_pin {
+	     mux { /* GPIOH_14 */
+			groups = "mclk_1_h";
+			function = "mclk";
+		};
+	};
+
 	i2c0_pins1:i2c0_pins1 {
 		mux {
 			groups = "i2c0_sda_z",
