keypad: t3: configure keypad [1/1]
PD#SWPL-47605

Problem:
configure gpio & adc keypad

Solution:
configure gpio & adc keypad

Verify:
t3_ar309

Change-Id: Id3c991b58cbcfaef906664202e0e816778d77dc5
Signed-off-by: Zelong Dong <zelong.dong@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -15,6 +15,7 @@
 #include <dt-bindings/pwm/meson.h>
 #include <dt-bindings/input/input.h>
 #include <dt-bindings/input/meson_ir.h>
+#include <dt-bindings/iio/adc/amlogic-saradc.h>
 #include "meson-ir-map.dtsi"
 #include "mesong12a-bifrost.dtsi"
 / {
