dts: enable cpu info node for t3 [1/1]
PD#SWPL-47108

Problem:
the cpu info node is not enabled

Solution:
enable cpu info node

Verify:
test pass on ar301

Change-Id: I43cb00a12dd077cc975418f275944673491a3ab1
Signed-off-by: Xingyu Chen <xingyu.chen@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -504,6 +504,11 @@
 					};
 				};
 			};
+
+			cpu_version {
+				compatible = "amlogic,meson-gx-ao-secure", "syscon";
+				reg=<0x0 0x10220 0x0 0x140>;
+			};
 		};
 
 		ethmac: ethernet@fdc00000 {
@@ -1278,6 +1283,11 @@
 		status = "disabled";
 	};
 
+	cpu_info {
+		compatible = "amlogic, cpuinfo";
+		status = "okay";
+		cpuinfo_cmd = <0x82000044>;
+	};
 };
 
 &periphs_pinctrl {
