cec: bringup for t3 [1/2]
PD#SWPL-47139

Problem:
cec bringup for t3

Solution:
cec bringup for t3

Verify:
ar301

Change-Id: I14d7b01a639d20e0529978f51733f136e7fa74dd
Signed-off-by: hang cheng <hang.cheng@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -947,6 +947,37 @@
 		};
 	};
 
+	aocec: aocec {
+		compatible = "amlogic, aocec-t3";
+		dev_name = "aocec";
+		status = "okay";
+		vendor_name = "Amlogic"; /* Max Chars: 8     */
+		/* Refer to the following URL at:
+		 * http://standards.ieee.org/develop/regauth/oui/oui.txt
+		 */
+		vendor_id = <0x000000>;
+		product_desc = "T3"; /* Max Chars: 16    */
+		cec_osd_string = "AML_TV"; /* Max Chars: 14    */
+		cec_version = <5>;/*5:1.4;6:2.0*/
+		port_num = <3>;
+		output = <0>;
+		cec_sel = <1>;/*1:use one ip, 2:use 2 ip*/
+		ee_cec; /*use cec a or b*/
+		arc_port_mask = <0x2>;
+		interrupts = <GIC_SPI 180 IRQ_TYPE_EDGE_RISING>;/*0:snps*/
+		interrupt-names = "hdmi_aocecb";
+		pinctrl-names = "default","hdmitx_aocecb","cec_pin_sleep";
+		pinctrl-0=<&cec_b>;
+		pinctrl-1=<&cec_b>;
+		pinctrl-2=<&cec_b>;
+		clocks = <&clkc CLKID_CECB_32K_CLKOUT>;
+		clock-names = "cecb_clk";
+		reg = <0x0 0xfe044000 0x0 0x2000
+		       0x0 0xfe010000 0x0 0x2000
+		       0x0 0xfe000000 0x0 0x2000>;
+		reg-names = "ao","periphs","clock"/*ao_exit sys_ctrl clk_ctrl*/;
+	};
+
 	rng {
 		compatible = "amlogic,meson-rng";
 		status = "okay";
@@ -1640,6 +1671,13 @@
 				"hdmirx_sda_c",
 				"hdmirx_scl_c";
 			function = "hdmirx";
+		};
+	};
+
+	cec_b: cec_b {
+		mux {
+			groups = "cec";
+			function = "cec";
 		};
 	};
 
