uvm: enable uvm on t3 [1/1]
PD#SWPL-47615

Problem:
uvm no enable on t3

Solution:
add uvm enable on t3

Verify:
t3-ar301

Change-Id: I9a426734ae0249e5b69f285a9c713d9b81b7b6e1
Signed-off-by: Dezhi Kong <dezhi.kong@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -850,6 +850,11 @@
 		reg = <0x0 0xfe036048 0x0 0x2000>;
 	};
 
+	meson_uvm {
+		compatible = "amlogic, meson_uvm";
+		status = "okay";
+	};
+
 	meson_videotunnel{
 		compatible = "amlogic, meson_videotunnel";
 		status = "okay";
