--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -484,6 +484,16 @@
 				max_frame_time = <200>;
 			};
 
+			irblaster: meson-irblaster@fe08410c {
+				compatible = "amlogic, meson_irblaster";
+				status = "okay";
+				reg = <0x0 0x8410c 0x0 0x10>;
+				#irblaster-cells = <2>;
+				interrupts = <GIC_SPI 23 IRQ_TYPE_EDGE_RISING>;
+				//pinctrl-names = "default";
+				//pinctrl-0 = <&irblaster_pins2>;
+			};
+
 			eth_phy: mdio-multiplexer@28000 {
 				compatible = "amlogic,g12a-mdio-mux";
 				reg = <0x0 0x28000 0x0 0xa4>;
@@ -1608,6 +1618,27 @@
 				"hdmirx_sda_c",
 				"hdmirx_scl_c";
 			function = "hdmirx";
+		};
+	};
+
+	irblaster_pins1:irblaster_pin1 {
+		mux {
+			groups = "remote_out_d1";
+			function = "remote_out";
+		};
+	};
+
+	irblaster_pins2:irblaster_pin2 {
+		mux {
+			groups = "remote_out_d9";
+			function = "remote_out";
+		};
+	};
+
+	irblaster_pins3:irblaster_pin3 {
+		mux {
+			groups = "remote_out_b";
+			function = "remote_out";
 		};
 	};
 
