atv_demod: t3 bringup [1/1]
PD#SWPL-47382

Problem:
t3 bringup.

Solution:
1.t3 bringup.
2.atv demod bringup.
3.vdac bringup.

Verify:
verified by t3.

Signed-off-by: nengwen.chen <nengwen.chen@amlogic.com>
Change-Id: I0a776372d08998df61ca417bedd032c5ef4f6c01

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -195,6 +195,11 @@
 		#mbox-cells = <1>;
 	};
 
+	vdac {
+		compatible = "amlogic, vdac-t3";
+		status = "okay";
+	};
+
 	adc: adc {
 		compatible = "amlogic, adc-t3";
 		status = "okay";
@@ -2078,6 +2083,19 @@
 		};
 	};
 
+	atvdemod_agc_pins: atvdemod_agc_pins {
+		mux {
+			groups = "atv_if_agc_z6";
+			function = "atv_if_agc";
+		};
+	};
+
+	dtvdemod_agc_pins: dtvdemod_agc_pins {
+		mux {
+			groups = "dtv_if_agc_z6";
+			function = "dtv_if_agc";
+		};
+	};
 };
 
 &gpu{
