--- a/arch/arm64/boot/dts/amlogic/t3_t965d4_ar321.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t965d4_ar321.dts
@@ -447,13 +447,13 @@
 
 	atv-demod {
 		compatible = "amlogic, atv-demod";
-		status = "disabled";
+		status = "okay";
 		btsc_sap_mode = <1>;
 		interrupts = <0 236 1>;
 		/* pinctrl-names="atvdemod_agc_pins"; */
 		/* pinctrl-0=<&atvdemod_agc_pins>; */
 		reg = <0x0 0xfe0be000 0x0 0x2000 /* demod reg */
-				0x0 0xfe008000 0x0 0x2000 /* hiu reg */
+				0x0 0xfe000000 0x0 0x2000 /* hiu reg */
 				0x0 0x0 0x0 0x0 /* periphs reg */
 				0x0 0xfe0bc000 0x0 0x2000>; /* adec reg */
 		reg_23cf = <0x88188832>;
