frc: default disable frc [1/1]
PD#SWPL-44472

Problem:
disable frc

Solution:
dts disabled

Verify:
t3

Change-Id: I8ca241bc09fc1a7be05b4ae15bd07e3ac93e720c
Signed-off-by: Yong Qin <yong.qin@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/t3_t965d4_ar321.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t965d4_ar321.dts
@@ -756,7 +756,7 @@
 	aml_frc {
 		compatible = "amlogic, t3_frc";
 		dev_name = "aml_frc";
-		status = "okay";
+		status = "disabled";
 		frc_en = <1>;/*1:enabel ;0:disable*/
 		frc_hw_pos = <0>;/*0:before postblend; 1:after postblend*/
 		interrupts = <GIC_SPI 286 IRQ_TYPE_EDGE_RISING
