dts: t3: add lut_dma support [1/1]
PD#SWPL-47165

Problem:
add lut_dma support for new chip

Solution:
add this support

Verify:
t3

Change-Id: I0d4f4899e69c56debaf1d107cda63d2a5c6d79c6
Signed-off-by: Cao Jian <jian.cao@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1409,6 +1409,11 @@
 		status = "okay";
 		cpuinfo_cmd = <0x82000044>;
 	};
+
+	lut_dma:lut_dma {
+		compatible = "amlogic, meson-t7, lut_dma";
+		status = "okay";
+	};
 };
 
 &periphs_pinctrl {
