--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1031,7 +1031,7 @@
 	};
 
 	rdma {
-		compatible = "amlogic, meson-t7, rdma";
+		compatible = "amlogic, meson-t3, rdma";
 		status = "okay";
 		interrupts = <GIC_SPI 215 IRQ_TYPE_EDGE_RISING>;
 		interrupt-names = "rdma";
@@ -1164,8 +1164,9 @@
 		dev_name = "amvideom";
 		status = "okay";
 		interrupts = <GIC_SPI 197 IRQ_TYPE_EDGE_RISING
-			GIC_SPI 194 IRQ_TYPE_EDGE_RISING>;
-		interrupt-names = "vsync", "vsync_viu2";
+			GIC_SPI 194 IRQ_TYPE_EDGE_RISING
+			GIC_SPI 193 IRQ_TYPE_EDGE_RISING>;
+		interrupt-names = "vsync", "vsync_viu2", "pre_vsync";
 	};
 
 	multi-di {
