--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar301.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar301.dts
@@ -776,6 +776,27 @@
 	pinctrl-0=<&i2c0_pins1>;
 };
 
+&i2c2 {
+	status = "okay";
+	clock-frequency = <300000>;
+	pinctrl-names="default";
+	pinctrl-0=<&i2c2_pins2>;
+
+	lcd_extern_i2c0: lcd_extern_i2c@0 {
+		compatible = "lcd_ext, i2c";
+		dev_name = "i2c_HV650LS";
+		reg = <0x29>;
+		status = "okay";
+	};
+
+	lcd_extern_i2c1: lcd_extern_i2c@1 {
+		compatible = "lcd_ext, i2c";
+		dev_name = "i2c_CS602";
+		reg = <0x33>;
+		status = "okay";
+	};
+};
+
 &ethmac {
 	status = "okay";
 	phy-handle = <&internal_ephy>;
