dtv_demod: t3 bringup, dvbs func [1/1]
PD#SWPL-47077

Problem:
no blind scan func

Solution:
1.set agc pin
2.add blind scan function

Verify:
verified by ar321

Signed-off-by: zhiwei.yuan <zhiwei.yuan@amlogic.com>
Change-Id: I07785c5ac593d52d106d85ef64050da59634fe48

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -2416,10 +2416,25 @@
 		};
 	};
 
-	dtvdemod_agc_pins: dtvdemod_agc_pins {
+	dtvdemod_if_agc_pins: dtvdemod_agc_pins {
 		mux {
 			groups = "dtv_if_agc_z6";
 			function = "dtv_if_agc";
+		};
+	};
+
+	dtvdemod_rf_agc_pins: dtvdemod_agc_pins {
+		mux {
+			groups = "dtv_rf_agc_z6";
+			function = "dtv_rf_agc";
+		};
+	};
+
+	diseqc_out: diseqc_out {
+		mux {/*only use out, don't support */
+			groups = "diseqc_out_z0";
+			function = "diseqc_out";
+			bias-pull-down;
 		};
 	};
 };
