--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar301.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar301.dts
@@ -1422,3 +1422,26 @@
 		};
 	};
 };
+
+&pwm_ef {
+	pinctrl-0 = <&pwm_f_pins1>;
+	pinctrl-names = "default";
+	status = "disabled";
+};
+
+&uart_A {
+	status = "disabled";
+	uart-has-rtscts;
+};
+
+&aml_wifi{
+	status = "okay";
+	chip_en-gpios  = <&gpio   GPIOC_11  GPIO_ACTIVE_HIGH>;
+	power_on-gpios = <&gpio   GPIOC_7  GPIO_ACTIVE_HIGH>;
+	disable-wifi-32k;
+};
+
+&aml_bt {
+	status = "okay";
+	reset-gpios = <&gpio  GPIOC_13  GPIO_ACTIVE_HIGH>;
+};
