led: t3 add leds state support [1/1]
PD#SWPL-47739

Problem:
Now, a led state machine is made in AOCPU. Need to add
an interface in the kernel to control the state of the
led.

Solution:
1. add leds state dts node.
2. disabled by default.

Verify:
t3

Change-Id: Iac057f550b941aa25926204510540e6cbacef4eb
Signed-off-by: jiayi.zhou <jiayi.zhou@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1545,6 +1545,11 @@
 			size = <16>;
 		};
 	};
+
+	state_led: state_led {
+		compatible = "amlogic,state-led-aocpu";
+		status = "disabled";
+	};
 };
 
 &periphs_pinctrl {
