--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar309.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar309.dts
@@ -831,7 +831,7 @@
 		clock-names = "mclk", "mclk_pad", "clk_srcpll";
 
 		pinctrl-names = "tdm_pins";
-		pinctrl-0 = <&mclk_1_pins
+		pinctrl-0 = </* &mclk_1_pins */
 			&tdm_b_pins
 			&tdm_d0_pins
 			&tdm_clk_pins>;
@@ -890,8 +890,8 @@
 			"pdm_dclk",
 			"pdm_sysclk";
 
-		//pinctrl-names = "pdm_pins";
-		//pinctrl-0 = <&pdmin>;
+		pinctrl-names = "pdm_pins";
+		pinctrl-0 = <&pdmin>;
 
 		/* mode 0~4, defalut:1 */
 		filter_mode = <1>;
@@ -1165,7 +1165,7 @@
 };
 
 &audio_data {
-	status = "disabled";
+	status = "okay";
 };
 
 &uart_B {
@@ -1363,6 +1363,16 @@
 				"tdm_fs1_h15",
 				"tdm_d0_h17";
 			function = "tdm";
+		};
+	};
+
+	pdmin: pdmin {
+		mux { /* GPIOH_19, GPIOH_18, GPIOH_14, GPIOH_22 */
+			groups = "pdm_dclk_h19",
+				"pdm_din0_h18",
+				"pdm_din1_h14",
+				"pdm_din2_h22";
+				function = "pdm";
 		};
 	};
 };
