--- a/drivers/amlogic/media/video_processor/ppmgr/Makefile
+++ b/drivers/amlogic/media/video_processor/ppmgr/Makefile
@@ -4,5 +4,5 @@
 
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_POST_PROCESS_MANAGER) += video_processor/ppmgr/ppmgr_drv.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_POST_PROCESS_MANAGER) += video_processor/ppmgr/ppmgr_vpp.o
-
+$(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_POST_PROCESS_MANAGER) += video_processor/ppmgr/decontour.o
 ccflags-y += -Iinclude/linux/ge2d/
