--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar319.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar319.dts
@@ -166,6 +166,8 @@
 	ppmgr {
 		compatible = "amlogic, ppmgr";
 		memory-region = <&ppmgr_reserved>;
+		interrupts = <0 285 1>;
+		interrupt-names = "decontour_pre";
 		status = "okay";
 	};
 	vdetect {
