--- a/arch/arm64/boot/dts/amlogic/t3_t965d4_ar331.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t965d4_ar331.dts
@@ -777,10 +777,11 @@
 
 	tvafe_avin_detect {
 		compatible = "amlogic, t3_tvafe_avin_detect";
-		status = "disabled";
+		status = "okay";
 		device_mask = <1>;/*bit0:ch1;bit1:ch2*/
-		interrupts = <0 12 1>,
-				<0 13 1>;
+		reg = <0x0 0xfe00a000 0x0 0x400>; /* cvbs irq base */
+		interrupts = <0 173 1>,
+				<0 172 1>;
 	};
 
 	tvafe {
@@ -809,8 +810,8 @@
 
 	vbi {
 		compatible = "amlogic, vbi";
-		status = "disabled";
-		interrupts = <0 83 1>;
+		status = "okay";
+		interrupts = <0 210 1>;
 	};
 
 	aml_frc {
