--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar311.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar311.dts
@@ -6,7 +6,7 @@
 /dts-v1/;
 
 #include "mesont3.dtsi"
-#include "partition_mbox.dtsi"
+#include "partition_normal_PR_32.dtsi"
 #include "mesont3_ar301-panel.dtsi"
 
 / {
@@ -464,6 +464,7 @@
 		/* MAP_ADDR_MODULE_APB4 */
 		/* MAP_ADDR_MODULE_TOP */
 		/* MAP_ADDR_MODULE_CLK_CTRL */
+		/* MAP_ADDR_MODULE_ANA_CTRL */
 		reg = < 0x0 0x0 0x0 0x0
 			0x0 0xff63C000 0x0 0x2000
 			0x0 0xffe0d000 0x0 0x2000
@@ -471,7 +472,8 @@
 			0x0 0x0 0x0 0x0
 			0x0 0x0 0x0 0x0
 			0x0 0xfe398000 0x0 0x18000
-			0x0 0xfe000000 0x0 0x1fff>;
+			0x0 0xfe000000 0x0 0x1fff
+			0x0 0xfe008000 0x280 0x334>;
 	};
 
 	atv-demod {
