USB: T3 USB2+pcie driver [1/1]
PD#SWPL-46337

Problem:
support USB2+pcie driver for t3

Solution:
support USB2+pcie driver for t3

Verify:
test pass on t3

Change-Id: I3e3a9926f006a51fe919afe612bb45d6a20d6528
Signed-off-by: Yue Wang <yue.wang@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1569,7 +1569,7 @@
 		pcie-ctrl-a-rst-bit = <12>;
 		pwr-ctl = <0>;
 		phy-type = <1>;
-		//power-domains = <&pwrdm PDID_T3_PCIE>;
+		power-domains = <&pwrdm PDID_T3_PCIE>;
 		pcie-ctrl-sleep-shift = <15>;
 		pcie-hhi-mem-pd-shift = <26>;
 		pcie-hhi-mem-pd-mask = <0xf>;
