audio: t3 ARC tx bringup [1/1]
PD#SWPL-47796

Problem:
t3 ARC tx bringup

Solution:
t3 ARC tx bringup

Verify:
t3-ar301

Change-Id: Icd8ac580aa347d6bce709f1fa789597014fb9bc8
Signed-off-by: zirui.xiao <zirui.xiao@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1035,6 +1035,17 @@
 			};
 		};
 
+		//hdmirx arc
+		hdmirx_arc {
+			compatible = "amlogic, hdmirx-arc-iomap";
+			reg = <0x0 0xfe39c000 0x0 0x3>;
+			#address-cells = <2>;
+			#size-cells = <2>;
+			ranges = <0x0 0x0 0x0 0xfe39c000 0x0 0x3>;
+
+			reg-names = "hdmirx-arc";
+		};
+
 		aml_bt: aml_bt {
 			compatible = "amlogic, aml-bt";
 			status = "disabled";
