--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar319.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar319.dts
@@ -49,6 +49,14 @@
 			clear-map;
 		};
 
+		dsp_fw_reserved:linux,dsp_fw {
+			compatible = "shared-dma-pool";
+			reusable;
+			size = <0x0 0x00800000>;
+			alignment = <0x0 0x00400000>;
+			alloc-ranges = <0x0 0x30000000 0x0 0x00800000>;
+		};
+
 		logo_reserved:linux,meson-fb {
 			compatible = "shared-dma-pool";
 			reusable;
