--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1184,6 +1184,20 @@
 		/*1920*1080*4*3 = 0x17BB000*/
 	};
 
+	dmx_aucpu: aucpu {
+		compatible = "amlogic, aucpu";
+		dev_name = "aml_aucpu";
+		status = "okay";
+		interrupts = <0 77 1>;
+		interrupt-names = "aucpu_irq";
+		#address-cells=<2>;
+		#size-cells=<2>;
+		ranges;
+		io_reg_base{
+			reg = <0x0 0xfe09e080 0x0 0x100>;
+		};
+	};
+
 	ge2d {
 		compatible = "amlogic, ge2d-t3";
 		status = "okay";
