dvfs: t3 temporarily disabled dvfs [1/1]
PD#SWPL-47428

Problem:
enabled dvfs, OSD will not work normally.

Solution:
temporarily disabled dvfs

Verify:
T3 AR301

Change-Id: I546c432b32aa1e845106a7d8696f94c8bca1f498
Signed-off-by: Bichao Zheng <bichao.zheng@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -359,7 +359,7 @@
 
 	cpufreq-meson {
 		compatible = "amlogic, cpufreq-meson";
-		status = "okay";
+		status = "disabled";
 	};
 
 	saradc: saradc@fe026000 {
