vdin: vdin screen, v4l2, afbce change [1/1]
PD#SWPL-47088

Problem:
1.vdin not screenshot
2.add v4l2 enable flag
3.disable 1080p afbce mode

Solution:
1.config register 0x1a51 wrbak0 hsync
2.addd v4l_support_en flag
3.change afbce_bit_mode to 0x11

Verify:
t982-ar301

Signed-off-by: qiang.liu <qiang.liu@amlogic.com>
Change-Id: Ie980960e4fc59317090e7e81d5a3b2b59dd1ce1a

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1010,9 +1010,10 @@
 			 * bit6 -- afbce for 720p
 			 * bit7 -- afbce for smaller resolution
 			 */
-			afbce_bit_mode = <0x31>;
+			afbce_bit_mode = <0x11>;
 			/* urgent_en; */
 			double_write_en;
+			v4l_support_en;
 		};
 
 		vdin1: vdin1 {/*common define*/
