jtag: T3: add support for jtag [1/1]
PD#SWPL-48080

Problem:
add support for jtag

Solution:
add support for jtag

Verify:
t3_ar309

Change-Id: Iece6d1a169beaffce9d494e3a0d94f4de5722423
Signed-off-by: Zelong Dong <zelong.dong@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -250,6 +250,14 @@
 			>;
 	};
 
+	jtag {
+		compatible = "amlogic, jtag";
+		status = "okay";
+		select = "disable"; /* disable/jtag_a/jtag_b */
+		pinctrl-names="jtag_a_pins";
+		pinctrl-0=<&jtag_a_pins>;
+	};
+
 	vddcpu0: pwm_b-regulator {
 		compatible = "pwm-regulator";
 		pwms = <&pwm_ab MESON_PWM_1 1500 0>;
@@ -2342,6 +2350,16 @@
 			groups = "uart_c_tx_h18",
 				"uart_c_rx_h19";
 			function = "uart_c";
+		};
+	};
+
+	jtag_a_pins: jtag_a_pin {
+		mux {
+			groups = "jtag_a_tdi",
+				 "jtag_a_tdo",
+				 "jtag_a_clk",
+				 "jtag_a_tms";
+			function = "jtag_a";
 		};
 	};
 
